--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,11 +1,39 @@
 .main {
-    height: 80vh;
     background-color: #EDF2F4;
 }
 
-.register, .login{
+.register, .login {
     display: flex;
     align-items: center;
     justify-content: center;
     height: 100vh;
+}
+
+.data-icons {
+    padding: 8px;
+    border-radius: 5px;
+    border: 1px solid black;
+    box-shadow: 0px 0px 5px 0 #0F110C;
+    margin-bottom: 0.6em;
+    background-color: white;
+}
+
+.data-icons svg {
+    font-size: 1.4rem;
+    cursor: pointer;
+}
+
+.active-icon {
+    color: rgb(62, 62, 242);
+}
+
+.inactive-icon {
+    color: gray;
+}
+
+.graph {
+    padding: 20px 0;
+    background-color: white;
+    border-radius: 10px;
+    box-shadow: 0px 0px 5px 0 #0F110C;
 }
