--- a/client/src/index.css
+++ b/client/src/index.css
@@ -36,3 +36,12 @@
     border-radius: 10px;
     box-shadow: 0px 0px 5px 0 #0F110C;
 }
+
+.icons > *:hover {
+    border-radius: 7px;
+    transition: background-color 0.5s;
+}
+
+.icons > *:hover {
+    background-color: #e3e3e3;
+}
