--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,5 +1,45 @@
 .main {
     background-color: #EDF2F4;
+    flex: 1 0 0;
+    border-left: 1px solid #c9c9c9;
+}
+
+.header {
+    display: flex;
+    justify-content: center;
+    width: 18%;
+    padding: 30px 0;
+    height: 100vh;
+}
+
+hr {
+    display: block;
+    height: 1px;
+    border: 0;
+    border-top: 1px solid #7c7c7c;
+    margin: 1em auto;
+    padding: 0;
+    width: 100%;
+}
+
+ul {
+    margin: 10px 0;
+    list-style-type: none;
+    padding: 0;
+}
+
+li {
+    border-radius: 10px;
+    padding: 5px 10px;
+    background-color: inherit;
+    color: green;
+    font-size: 1.1em;
+    margin: 0;
+    transition: background-color 0.2s;
+}
+
+li:hover {
+    background-color: #f0f0f0;
 }
 
 .register, .login {
@@ -44,4 +84,14 @@
 
 .icons > *:hover {
     background-color: #e3e3e3;
+}
+
+.link {
+    text-decoration: none;
+    color: green;
+    font-weight: bold;
+}
+
+.link:hover {
+    color: green;
 }
