--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,7 +1,8 @@
 .main {
-    background-color: #EDF2F4;
+    background: rgb(34,193,195);
+    background: linear-gradient(180deg, rgba(34,193,195,1) 0%, rgba(249,188,255,1) 100%); 
     flex: 1 0 0;
-    border-left: 1px solid #c9c9c9;
+    border-left: 2px solid #c9c9c9;
 }
 
 .header {
@@ -47,6 +48,18 @@ li:hover {
     align-items: center;
     justify-content: center;
     height: 100vh;
+    background-image: url("https://coolbackgrounds.io/images/backgrounds/index/sea-edge-79ab30e2.png");
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+
+.registerFlex, .loginFlex {
+    width: 67%;
+    height: 67%;
+    border-radius: 15px;
+    overflow: hidden;
+    background-color: white;
+    box-shadow: 0px 0px 10px 0 #0F110C;
 }
 
 .data-icons {
